<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vehicle.Vehicle_booking_form_activity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_gravity="center_horizontal"
                android:text="VEHICLE RENTAL FORM"
                android:textStyle="bold"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </TextView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="20dp"
                android:layout_gravity="center">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="20dp"
                    android:background="#c79004"
                    android:orientation="vertical">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <TextView
                                android:layout_marginTop="10dp"
                                android:text="Title"
                                android:textStyle="bold"
                                android:textColor="@color/black"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"/>

                            <Spinner
                                android:id="@+id/spinner1"
                                android:text="Please select"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1" />

                        </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">
                                <TextView
                                    android:text="Full Name"
                                    android:textStyle="bold"
                                    android:textColor="@color/black"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"/>

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/hirename"
                                    android:background="#B2BEB5"
                                    android:layout_width="match_parent"
                                    android:layout_height="40dp"/>

                            </LinearLayout>
                    </LinearLayout>


                    <TextView

                        android:layout_marginTop="30dp"
                        android:text="Email"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/hireemail"
                        android:hint="eg: something@email.com"
                        android:background="#B2BEB5"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"/>

                    <TextView

                        android:layout_marginTop="30dp"
                        android:text="Mobile Number"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/hirembnumber"
                        android:hint=""
                        android:maxLength="10"
                        app:prefixText="+977"
                        android:background="#B2BEB5"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"/>

                    <TextView
                        android:layout_marginTop="10dp"
                        android:text="No. of person"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/hirenoofperson"
                        android:background="#B2BEB5"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"/>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <TextView
                                android:layout_marginTop="10dp"
                                android:text="Types of Vehicle"
                                android:textStyle="bold"
                                android:textColor="@color/black"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"/>

                            <Spinner
                                android:id="@+id/spinner2"
                                android:text="Please select"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <TextView
                                android:layout_marginTop="10dp"
                                android:text="No. of Vehicle"
                                android:textStyle="bold"
                                android:textColor="@color/black"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"/>

                            <com.michaelmuenzer.android.scrollablennumberpicker.ScrollableNumberPicker
                                android:id="@+id/no_of_vehicle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/number_picker_bg"
                                app:snp_buttonIconLeft="@drawable/ic_left_foreground"
                                app:snp_buttonIconRight="@drawable/ic_right_foreground"
                                app:snp_orientation="horizontal"
                                app:snp_maxValue="5"
                                app:snp_minValue="1"
                                app:snp_stepSize="1"
                                app:snp_value="1"/>

                        </LinearLayout>
                    </LinearLayout>


                    <LinearLayout
                        android:layout_marginTop="30dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:text="Trip start date"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <EditText
                            android:inputType="date"
                            android:id="@+id/hirestartdate"
                            android:layout_marginLeft="50dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="date"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_marginTop="30dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:text="Trip end date"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <EditText
                            android:inputType="date"
                            android:id="@+id/hireenddate"
                            android:layout_marginLeft="50dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="date"/>

                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="30dp"
                        android:text="Details of day by day travel details"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/hirecomments"
                        android:background="#B2BEB5"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"/>

                    <Button
                        android:id="@+id/btnrent"
                        android:layout_marginTop="30dp"
                        android:text="rent"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <Button
                        android:id="@+id/btnvupdate"
                        android:layout_marginTop="10dp"
                        android:text="update"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>




        </LinearLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>