...
        android:text="Click to check new places"
        android:textColor="@color/black"
        android:textSize="21dp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/selectplace"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_rectangle"
        android:gravity="center"
...
