...
                    app:layout_constraintEnd_toEndOf="@+id/imageView7"
                    app:layout_constraintStart_toStartOf="@+id/imageView7"
                    app:layout_constraintTop_toBottomOf="@+id/imageView7" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/chitwannear"
                android:layout_width="0dp"
                android:layout_height="175dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="#fce0c0">

...
