...
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:src="@drawable/chitwan"
                android:scaleType="fitXY"
                android:alpha=".8"
                android:layout_gravity="center"
                android:layout_width="414dp"
                android:layout_height="300dp"/>

...
