...
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:id="@+id/Atm">
                    <androidx.cardview.widget.CardView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        app:cardCornerRadius="20dp">

                        <ImageView
...
