<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        app:cardCornerRadius="10dp"
        android:layout_width="match_parent"
        android:layout_height="140dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/kathmandu"
            android:orientation="vertical">

            <TextView
                android:layout_marginTop="80dp"
                android:layout_marginLeft="50dp"
                style="@style/TextAppearance.AppCompat.Title"
                android:text="Kathmandu"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginTop="0dp"
                android:layout_marginLeft="50dp"
                style="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
                android:text="Capital city of Nepal"
                android:textSize="12dp"
                android:textColor="#fbff0d"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>



</LinearLayout>