...
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#f2b977"
            android:orientation="horizontal">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/kathmandumap"
                android:layout_width="0dp"
                android:layout_height="175dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="#fce0c0">

...
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#f2b977"
            android:orientation="horizontal">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/kathmanduvideo"
                android:layout_width="0dp"
                android:layout_height="175dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="#fce0c0">

...
